--- a/themes/html5-dopetrope/templates/base.html
+++ b/themes/html5-dopetrope/templates/base.html
@@ -223,7 +223,7 @@
 								<!-- Copyright -->
 									<div id="copyright">
 										<ul class="links">
-											<li>&copy; {{ COPYRIGHT }}	</li>
+											<li>&copy; {{ COPYRIGHT }}.</li>
                                             <li>Généré avec: <a href="https://blog.getpelican.com/">Pelican</a></li>
 											<li>Habillage: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
