maj de la cible des liens

--- a/themes/html5-dopetrope/templates/base.html
+++ b/themes/html5-dopetrope/templates/base.html
@@ -138,7 +138,7 @@
 									</header>
 									<ul class="divided">
                                     {% for name, link in LINKS %}
-                                        <li><a href="{{ link }}">{{ name }}</a></li>
+                                        <li><a href="{{ link }}" target="_blank">{{ name }}</a></li>
                                     {% endfor %}
 									</ul>
 								</section>
@@ -152,7 +152,7 @@
 									</header>
 									<ul class="divided">
                                     {% for name, link in PARTNERS %}
-                                        <li><a href="{{ link }}">{{ name }}</a></li>
+                                        <li><a href="{{ link }}" target="_blank">{{ name }}</a></li>
                                     {% endfor %}
 									</ul>
 								</section>
@@ -224,8 +224,8 @@
 									<div id="copyright">
 										<ul class="links">
 											<li>&copy; {{ COPYRIGHT }}.</li>
-                                            <li>Généré avec: <a href="https://blog.getpelican.com/">Pelican</a></li>
-											<li>Habillage: <a href="http://html5up.net">HTML5 UP</a></li>
+                                            <li>Généré avec: <a href="https://blog.getpelican.com/" target="_blank">Pelican</a></li>
+											<li>Habillage: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 										</ul>
 									</div>
 							</div>
