maj footer et lien code source

--- a/themes/html5-dopetrope/templates/base.html
+++ b/themes/html5-dopetrope/templates/base.html
@@ -217,8 +217,9 @@
 								<!-- Copyright -->
 									<div id="copyright">
 										<ul class="links">
-											<li>&copy; {{ COPYRIGHT }}.</li>
-                                            <li>Généré avec: <a href="https://blog.getpelican.com/" target="_blank">Pelican</a></li>
+											<li>&copy; {{ COPYRIGHT }}</li>
+                                            <li>Généré avec <a href="https://blog.getpelican.com/" target="_blank">Pelican</a></li>
+                                            <li>{{ CODE }}.</li>
 											<li>Habillage: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 										</ul>
 									</div>
