--- a/themes/html5-dopetrope/templates/index.html
+++ b/themes/html5-dopetrope/templates/index.html
@@ -15,7 +15,7 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<section class="first">
-										<i class="icon solid featured"><img src="/theme/images/gnu.png" alt="GNU Logo"/></i>
+										<i class="icon solid featured"><img src="/theme/images/linux.png" alt="GNU Logo"/></i>
 										<header>
 											<h2>Libre</h2>
 										</header>
