--- a/themes/html5-dopetrope/templates/page.html
+++ b/themes/html5-dopetrope/templates/page.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block title %}{{ page.title }} | {{ SITENAME }}{% endblock title %}
+
 {% block content %}
 						<!-- Content -->
 							<article class="box post">
@@ -19,4 +21,4 @@
                                     </a></li>
 								</ul>
                             </div>
-{% endblock %}
+{% endblock content %}
